--- a/Interaction_and_Pathways_Data_Retrival.ipynb
+++ b/Interaction_and_Pathways_Data_Retrival.ipynb
@@ -22,36 +22,30 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "uvatOcmK1ekF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#installing biopython\n",
         "!pip install biopython"
       ],
       "metadata": {
-        "id": "V3fZsfR_mjF3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5d8b3d67-369f-4b22-d123-2e59a3f29814"
+        "id": "V3fZsfR_mjF3"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting biopython\n",
-            "  Downloading biopython-1.85-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from biopython) (2.0.2)\n",
-            "Downloading biopython-1.85-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: biopython\n",
-            "Successfully installed biopython-1.85\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "foAQwLnOkShG"
       },
@@ -71,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "CiEPSGYhkv1p"
       },
@@ -87,6 +81,15 @@
         "os.makedirs(SAVE_PATH, exist_ok=True)\n",
         "os.makedirs(PDB_SAVE_PATH, exist_ok=True)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Skip the block below if you have already mix the csv files"
+      ],
+      "metadata": {
+        "id": "lEmFWaEo1AL5"
+      }
     },
     {
       "cell_type": "code",
@@ -121,13 +124,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "WSNHLRxclGKb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4618ba99-9b0f-4cee-ea1e-3429c716ac60"
+        "outputId": "e89ed0f9-3d09-40d1-d83e-5294ed3184df"
       },
       "outputs": [
         {
@@ -141,7 +144,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ],
       "source": [
@@ -178,28 +181,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "✅ **Retrieve PDB files for each PubChem ID**  \n",
-        "- For each PubChem ID listed in our CSV (interactions and pathways), query the RCSB database to check if a corresponding PDB structure exists. If found, download the PDB file. This step is necessary before performing BLAST analysis.\n",
+        "# ✅ Step 1: Download PDB Structures of Drug Targets\n",
         "\n",
-        "✅ **Extract protein sequences from PDB chains**  \n",
-        "- To prepare for BLAST, extract individual protein chains from each PDB file. BLAST requires chain-level separation to function correctly.\n",
+        "We have a list of drugs (PubChem CIDs) and their known protein targets.\n",
         "\n",
-        "✅ **Run BLASTp against PDB, restricted to *Plasmodium falciparum* (taxonomy ID: 5833)**  \n",
-        "- Perform BLASTp to compare each extracted chain against the PDB database, filtered by *Plasmodium falciparum* (taxID 5833). This helps identify regions in the pathogen similar to our targets. We can infer potential drug binding relevance to the organism if a strong match is found.\n",
+        "Goal:\n",
+        "Find the 3D structure (PDB file) of each protein target (the human protein that interacts with the drug).\n",
         "\n",
-        "✅ **Save top 3 BLAST hits to JSON**  \n",
-        "- Store the top 3 matches per query, including key metadata such as alignment score, E-value, and percent identity. Include the matched organism’s PDB ID if available; otherwise, record 'NAN'.\n",
+        "How:\n",
+        "For each PubChem CID + Target:\n",
         "\n",
-        "✅ **Download PDB structures (if available) or AlphaFold predictions**  \n",
-        "- For each matched entry in the results, attempt to download the corresponding PDB file. If not available (i.e., PDB ID is 'NAN'), fall back to downloading AlphaFold predictions for the matched protein to analyze structural similarities."
+        "    Search RCSB Protein Data Bank to see if there’s a known structure.\n",
+        "\n",
+        "    If found, download the .pdb or .cif file and save it.\n",
+        "\n",
+        "This gives you the structures of the human proteins that the drugs are known to interact with."
       ],
-      "metadata": {
-        "id": "1BEqCAw_vID-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "fILiLXmEamK5"
       }
@@ -213,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "z-_FcfDC_2Oq"
       },
@@ -379,8 +376,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1YNmjrvWUlCgoDJulTgR99YsyX_dsoEIx",
-      "authorship_tag": "ABX9TyNXmtL77/Sen3t58g9j0HvN",
+      "authorship_tag": "ABX9TyP/CVVhNQz6LqbJLBfT0rJw",
       "include_colab_link": true
     },
     "kernelspec": {
