--- a/Interaction_and_Pathways_Data_Retrival.ipynb
+++ b/Interaction_and_Pathways_Data_Retrival.ipynb
@@ -13,6 +13,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Purpose for the project:\n",
+        "\n",
+        "Directly use the PDB ID to download the structure\n",
+        "\n",
+        "OR\n",
+        "\n",
+        "If only UniProt ID is returned, download AlphaFold prediction"
+      ],
+      "metadata": {
+        "id": "5d-k6vfB_FEY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **🟢 1. Configuration and Paths**"
       ],
       "metadata": {
@@ -326,11 +341,12 @@
         "    print(f\"Processed PubChem ID: {pubchem_id}\")"
       ],
       "metadata": {
-        "id": "BKkxmmQ12axF",
-        "outputId": "47db32a9-c59e-4801-98d5-0bfeb4474b6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "BKkxmmQ12axF",
+        "outputId": "47db32a9-c59e-4801-98d5-0bfeb4474b6c"
       },
       "execution_count": 17,
       "outputs": [
@@ -668,20 +684,62 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# ✅ Step 2: BLAST Against Malaria Proteins\n",
+        "\n",
+        "Now you have the sequences of drug target proteins.\n",
+        "\n",
+        "Goal:\n",
+        "Find if these human targets are similar to any malaria proteins (Taxonomy ID 5833).\n",
+        "\n",
+        "How:\n",
+        "You run BLASTp (protein-protein alignment):\n",
+        "\n",
+        "    For each chain FASTA sequence\n",
+        "\n",
+        "    Against a filtered BLAST database of only malaria proteins\n",
+        "\n",
+        "    Save the results (scores, % identity, alignment, PDB ID of malaria proteins)\n",
+        "\n",
+        "If you find similar malaria proteins → there’s a chance the drug may bind to them.\n",
+        "\n",
+        "#🎯 Why Chain Separation is Necessary\n",
+        "\n",
+        "A PDB file may contain:\n",
+        "\n",
+        "    One protein chain → or\n",
+        "\n",
+        "    Multiple chains (complexes, homo-oligomers, hetero-oligomers)\n",
+        "\n",
+        "When you want to find if a specific part (a chain) of a known target protein is similar to any malaria protein, you don’t want to: ❌ BLAST the entire PDB complex\n",
+        "✅ You want to BLAST each chain separately\n",
+        "\n",
+        "Reason:\n",
+        "Each chain may correspond to:\n",
+        "\n",
+        "    A different protein\n",
+        "\n",
+        "    A functional domain\n",
+        "\n",
+        "    A protein from another species (in complexes)\n",
+        "\n",
+        "If you BLAST the whole thing → you get garbage results.\n",
+        "If you BLAST each chain → you will correctly detect homologs in malaria proteins (taxonomy 5833)."
+      ],
       "metadata": {
         "id": "g4KKeDELamqC"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "id": "z-_FcfDC_2Oq"
-      },
-      "outputs": [],
+        "id": "w4b0uh05_C-A"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "# --- 2. Sequence Extraction ---\n",
         "def extract_protein_chains(pdb_file_path):\n",
         "    \"\"\"Extracts protein chain sequences from a PDB file.\"\"\"\n",
         "    parser = PDBParser(QUIET=True)\n",
@@ -697,7 +755,23 @@
         "                    sequence = ''.join(str(peptide.get_sequence()) for peptide in peptides)\n",
         "                    if sequence:\n",
         "                        chain_sequences[chain.id] = sequence\n",
-        "    return chain_sequences\n",
+        "    return chain_sequences\n"
+      ],
+      "metadata": {
+        "id": "e6BtIdmt7CrX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "z-_FcfDC_2Oq"
+      },
+      "outputs": [],
+      "source": [
+        "# --- 2. Sequence Extraction ---\n",
         "\n",
         "# --- 3. BLAST Functions ---\n",
         "def blast_sequence(sequence, tax_id=\"5833\"):\n",
@@ -841,7 +915,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvhkS57/Iornux8maTDQj7",
+      "authorship_tag": "ABX9TyOM3ir/LgsqRg5FKUdqrAdN",
       "include_colab_link": true
     },
     "kernelspec": {
