Chain Seperator and .fasta Creation Added

--- a/Interaction_and_Pathways_Data_Retrival.ipynb
+++ b/Interaction_and_Pathways_Data_Retrival.ipynb
@@ -13,13 +13,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Purpose for the project:\n",
+        "#🧬 Core Goal of the Pipeline\n",
         "\n",
-        "Directly use the PDB ID to download the structure\n",
+        "The pipeline aims to identify potential repurposing opportunities for existing drugs by leveraging known drug-target interactions and structural homology with malaria proteins. Specifically:\n",
         "\n",
-        "OR\n",
+        "  - For each drug in the dataset:\n",
+        "  - Retrieve the known protein targets (human or other) that the drug interacts with.\n",
         "\n",
-        "If only UniProt ID is returned, download AlphaFold prediction"
+        "  - For each target:\n",
+        "\n",
+        "      - Download the corresponding PDB structure.\n",
+        "\n",
+        "      - Extract and isolate individual protein chains.\n",
+        "\n",
+        "   - For each chain:\n",
+        "   - Perform BLASTp search against the PDB database restricted to Plasmodium falciparum (taxID: 5833) to identify structurally similar malaria proteins.\n",
+        "\n",
+        "   - For each matched malaria protein:\n",
+        "\n",
+        "      - If a PDB structure is available, download it.\n",
+        "\n",
+        "      - If only a UniProt ID exists, retrieve the AlphaFold predicted structure.\n",
+        "\n",
+        "Final Objective:\n",
+        "  - Compare the known drug-target interaction site with the structurally similar malaria protein site.\n",
+        "  - If significant structural similarity is observed, infer that the drug may also bind to the malaria protein at the same or similar site → suggesting a potential for drug repurposing."
       ],
       "metadata": {
         "id": "5d-k6vfB_FEY"
@@ -731,34 +749,380 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w4b0uh05_C-A"
+        "id": "ltvAzCbpGAV0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZPTAmbTtGAQS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#🎯 What BLAST Can Return\n",
+        "\n",
+        "When you run BLASTp against PDB or a filtered NCBI database with taxID = 5833, each result hit will contain:\n",
+        "\n",
+        "    Subject sequence ID (sseqid) → This is usually the PDB ID + Chain or a UniProt ID\n",
+        "\n",
+        "    Alignment score, E-value, percent identity → Already useful\n",
+        "\n",
+        "    Sometimes, the definition line of the matched sequence → Contains the actual protein name\n",
+        "\n",
+        "You can customize the output format to include:\n",
+        "\n",
+        "✅ sseqid → PDB ID or UniProt ID\n",
+        "\n",
+        "✅ stitle → Full title of matched protein\n",
+        "\n",
+        "✅ taxid → Organism tax ID\n",
+        "\n",
+        "✅ slen → Length of matched sequence\n",
+        "\n",
+        "✅ evalue, pident, bitscore → Scores\n",
+        "\n",
+        "What we want:\n",
+        "\n",
+        "Matched PDB/UniProt ID\n",
+        "\n",
+        "Protein name\n",
+        "\n",
+        "Any metadata\n"
+      ],
+      "metadata": {
+        "id": "ASI3rnUa_VET"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#why do we need these:\n",
+        "import subprocess\n",
+        "from pathlib import Path\n",
+        "\n",
+        "#not sure if the previous one works\n",
+        "from Bio.PDB.Polypeptide import is_aa"
+      ],
+      "metadata": {
+        "id": "BRobR3m1MxhW"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Seperate the chains**"
+      ],
+      "metadata": {
+        "id": "SqYWdG3FNG1X"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "def extract_protein_chains(pdb_file_path):\n",
-        "    \"\"\"Extracts protein chain sequences from a PDB file.\"\"\"\n",
+        "    \"\"\"\n",
+        "    Extracts protein chain sequences from a PDB file and saves them as FASTA files.\n",
+        "\n",
+        "    Args:\n",
+        "        pdb_file_path (str): Path to the PDB file.\n",
+        "\n",
+        "    Returns:\n",
+        "        list: List of generated FASTA file paths.\n",
+        "    \"\"\"\n",
         "    parser = PDBParser(QUIET=True)\n",
         "    structure = parser.get_structure(\"structure\", pdb_file_path)\n",
         "    ppb = PPBuilder()\n",
-        "    chain_sequences = {}\n",
+        "    chain_fastas = []\n",
+        "\n",
+        "    pdb_path = Path(pdb_file_path)\n",
+        "    output_dir = pdb_path.parent\n",
+        "    pdb_name = pdb_path.stem\n",
+        "\n",
         "    for model in structure:\n",
         "        for chain in model:\n",
-        "            residues = [res for res in chain if is_aa(res)]\n",
-        "            if residues:\n",
-        "                peptides = ppb.build_peptides(chain)\n",
-        "                if peptides:\n",
-        "                    sequence = ''.join(str(peptide.get_sequence()) for peptide in peptides)\n",
-        "                    if sequence:\n",
-        "                        chain_sequences[chain.id] = sequence\n",
-        "    return chain_sequences\n"
+        "            peptides = ppb.build_peptides(chain)\n",
+        "            if peptides:\n",
+        "                sequence = ''.join(str(peptide.get_sequence()) for peptide in peptides)\n",
+        "                if sequence:\n",
+        "                    chain_id = chain.id\n",
+        "                    fasta_path = output_dir / f\"{pdb_name}_{chain_id}.fasta\"\n",
+        "                    with open(fasta_path, \"w\") as f:\n",
+        "                        f.write(f\">{pdb_name}_{chain_id}\\n{sequence}\\n\")\n",
+        "                    chain_fastas.append(str(fasta_path))\n",
+        "    return chain_fastas\n"
       ],
       "metadata": {
-        "id": "e6BtIdmt7CrX"
+        "id": "4kKSL0plND9L"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "folders_path = '/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results'\n",
+        "\n",
+        "# Iterate through each folder in folders_path\n",
+        "for folder_name in os.listdir(folders_path):\n",
+        "    folder_path = os.path.join(folders_path, folder_name)\n",
+        "    # Check if it's a directory\n",
+        "    if os.path.isdir(folder_path):\n",
+        "        # Iterate through each file in the folder\n",
+        "        for file_name in os.listdir(folder_path):\n",
+        "            if file_name.endswith('.pdb'):\n",
+        "                file_path = os.path.join(folder_path, file_name)\n",
+        "                extract_protein_chains(file_path)\n",
+        "                print(f\"Processed {file_name} in {folder_name}\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "pG_hoopzNJ8G",
+        "outputId": "2246d597-3720-499c-dab2-83b28475b4d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed 4I24.pdb in 11511120\n",
+            "Processed 4I23.pdb in 11511120\n",
+            "Processed 4FGL.pdb in 444810\n",
+            "Processed 7DI7.pdb in 444810\n",
+            "Processed 1CET.pdb in 444810\n",
+            "Processed 8F4Z.pdb in 444810\n",
+            "Processed 4V2O.pdb in 444810\n",
+            "Processed 5I9I.pdb in 9939609\n",
+            "Processed 3FBV.pdb in 42627755\n",
+            "Processed 3SDJ.pdb in 42627755\n",
+            "Processed 6XD3.pdb in 119081415\n",
+            "Processed 8ORM.pdb in 119081415\n",
+            "Processed 5VC5.pdb in 5311382\n",
+            "Processed 2VRX.pdb in 9914412\n",
+            "Processed 3ARP.pdb in 2993\n",
+            "Processed 3ART.pdb in 2993\n",
+            "Processed 1JT6.pdb in 2993\n",
+            "Processed 3BR1.pdb in 2993\n",
+            "Processed 3BR2.pdb in 2993\n",
+            "Processed 3BT9.pdb in 2993\n",
+            "Processed 3BTJ.pdb in 2993\n",
+            "Processed 3VW0.pdb in 2993\n",
+            "Processed 1OYD.pdb in 2993\n",
+            "Processed 3RG9.pdb in 121750\n",
+            "Processed 1J3K.pdb in 121750\n",
+            "Processed 1J3I.pdb in 121750\n",
+            "Processed 5EF8.pdb in 6918837\n",
+            "Processed 4WNU.pdb in 441074\n",
+            "Processed 6LQA.pdb in 441074\n",
+            "Processed 3GY3.pdb in 4735\n",
+            "Processed 3CR5.pdb in 4735\n",
+            "Processed 1D64.pdb in 4735\n",
+            "Processed 3HII.pdb in 4735\n",
+            "Processed 3CR4.pdb in 4735\n",
+            "Processed 8JY8.pdb in 4735\n",
+            "Processed 3EY0.pdb in 4735\n",
+            "Processed 1RKW.pdb in 4735\n",
+            "Processed 7WP3.pdb in 4735\n",
+            "Processed 8OFY.pdb in 4735\n",
+            "Processed 5ZNC.pdb in 3034034\n",
+            "Processed 4WNV.pdb in 3034034\n",
+            "Processed 4UIN.pdb in 3034034\n",
+            "Processed 8R7Q.pdb in 3034034\n",
+            "Processed 4UIL.pdb in 3034034\n",
+            "Processed 6PSJ.pdb in 154257\n",
+            "Processed 4XI3.pdb in 154257\n",
+            "Processed 5YO1.pdb in 439530\n",
+            "Processed 4TVA.pdb in 439530\n",
+            "Processed 2DPT.pdb in 439530\n",
+            "Processed 3Q3D.pdb in 439530\n",
+            "Processed 1Q7Y.pdb in 439530\n",
+            "Processed 5NC5.pdb in 439530\n",
+            "Processed 7AXM.pdb in 6445562\n",
+            "Processed 5VCW.pdb in 6445562\n",
+            "Processed 1JQE.pdb in 446536\n",
+            "Processed 3FPD.pdb in 25150857\n",
+            "Processed 7BI2.pdb in 51358113\n",
+            "Processed 4JSX.pdb in 51358113\n",
+            "Processed 4C2V.pdb in 16007391\n",
+            "Processed 3TVB.pdb in 30323\n",
+            "Processed 427D.pdb in 30323\n",
+            "Processed 1O0K.pdb in 30323\n",
+            "Processed 1D11.pdb in 30323\n",
+            "Processed 308D.pdb in 30323\n",
+            "Processed 152D.pdb in 30323\n",
+            "Processed 2D34.pdb in 30323\n",
+            "Processed 1D10.pdb in 30323\n",
+            "Processed 1D33.pdb in 30323\n",
+            "Processed 1DA0.pdb in 30323\n",
+            "Processed 1JO2.pdb in 30323\n",
+            "Processed 1VTH.pdb in 30323\n",
+            "Processed 1VTI.pdb in 30323\n",
+            "Processed 110D.pdb in 30323\n",
+            "Processed 7QZ6.pdb in 30323\n",
+            "Processed 3F8F.pdb in 30323\n",
+            "Processed 7QZ7.pdb in 30323\n",
+            "Processed 7QZ8.pdb in 30323\n",
+            "Processed 4KR8.pdb in 30323\n",
+            "Processed 3BYO.pdb in 11785878\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Do the blast search with each .fasta file sequence and toxonomy = 5833**"
+      ],
+      "metadata": {
+        "id": "wDwA0YwrOHNW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def run_blastp(query_fasta, db_path, taxid, output_json):\n",
+        "    \"\"\"\n",
+        "    Run BLASTp for a query FASTA file against a PDB database restricted to a specific taxonomy.\n",
+        "\n",
+        "    Args:\n",
+        "        query_fasta (str): Path to the query FASTA file.\n",
+        "        db_path (str): Path to the BLAST database.\n",
+        "        taxid (str): Taxonomy ID to restrict the search.\n",
+        "        output_json (str): Path to save the BLAST results as JSON.\n",
+        "    \"\"\"\n",
+        "    temp_output = output_json.replace('.json', '.txt')\n",
+        "\n",
+        "    command = [\n",
+        "        \"blastp\",\n",
+        "        \"-query\", query_fasta,\n",
+        "        \"-db\", db_path,\n",
+        "        \"-entrez_query\", f\"txid{taxid}[Organism:exp]\",\n",
+        "        \"-outfmt\", \"6 qseqid sseqid pident length evalue bitscore stitle\",\n",
+        "        \"-max_target_seqs\", \"3\",\n",
+        "        \"-out\", temp_output\n",
+        "    ]\n",
+        "\n",
+        "    print(f\"Running BLASTp for: {query_fasta}\")\n",
+        "    subprocess.run(command, check=True)\n",
+        "\n",
+        "    results = []\n",
+        "    with open(temp_output, \"r\") as f:\n",
+        "        for line in f:\n",
+        "            parts = line.strip().split(\"\\t\")\n",
+        "            results.append({\n",
+        "                \"query_id\": parts[0],\n",
+        "                \"subject_id\": parts[1],\n",
+        "                \"percent_identity\": float(parts[2]),\n",
+        "                \"alignment_length\": int(parts[3]),\n",
+        "                \"evalue\": float(parts[4]),\n",
+        "                \"bitscore\": float(parts[5]),\n",
+        "                \"subject_title\": parts[6]\n",
+        "            })\n",
+        "\n",
+        "    with open(output_json, \"w\") as f:\n",
+        "        json.dump(results, f, indent=4)\n",
+        "\n",
+        "    os.remove(temp_output)\n",
+        "    print(f\"[✓] BLAST results saved to: {output_json}\")\n",
+        "\n",
+        "\n",
+        "def process_pubchem_folder(pubchem_folder, db_path, taxid=\"5833\"):\n",
+        "    \"\"\"\n",
+        "    Process a folder of PDB files: extract chains, run BLASTp, save results.\n",
+        "\n",
+        "    Args:\n",
+        "        pubchem_folder (str): Path to the folder for one PubChem ID.\n",
+        "        db_path (str): Path to the BLAST database.\n",
+        "        taxid (str): Taxonomy ID for BLAST restriction.\n",
+        "    \"\"\"\n",
+        "    folder_path = Path(pubchem_folder)\n",
+        "\n",
+        "    for pdb_file in folder_path.glob(\"*.pdb\"):\n",
+        "        print(f\"\\n[INFO] Processing PDB: {pdb_file.name}\")\n",
+        "        chain_fastas = extract_protein_chains(str(pdb_file))\n",
+        "\n",
+        "        for fasta_path in chain_fastas:\n",
+        "            fasta = Path(fasta_path)\n",
+        "            json_output = fasta.with_suffix(\".json\")\n",
+        "\n",
+        "            # ✅ Skip if JSON result already exists\n",
+        "            if json_output.exists():\n",
+        "                print(f\"[SKIP] Result already exists: {json_output.name}\")\n",
+        "                continue\n",
+        "\n",
+        "            run_blastp(str(fasta), db_path, taxid, str(json_output))"
+      ],
+      "metadata": {
+        "id": "Xk0rOlnDKTx4"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uMRE_rkaOaGe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RciBtwgfOaDN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SSLgiOgjOaAH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WEb6MLjhOZ9F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sFcEfTA5OZ6N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IT06sKaGOZ3B"
       },
       "execution_count": null,
       "outputs": []
@@ -915,7 +1279,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOM3ir/LgsqRg5FKUdqrAdN",
+      "authorship_tag": "ABX9TyPAz5zP3xM/2e0Cn3aJmtTx",
       "include_colab_link": true
     },
     "kernelspec": {
