Blast Function Added

--- a/Interaction_and_Pathways_Data_Retrival.ipynb
+++ b/Interaction_and_Pathways_Data_Retrival.ipynb
@@ -238,7 +238,7 @@
       "cell_type": "code",
       "source": [
         "# This is just a simple query to get the pubchem_id and pdb_id as one query\n",
-        "def build_query(pubchem_id, pdb_id):\n",
+        "def pdb_query(pubchem_id, pdb_id):\n",
         "    return {\n",
         "        \"query\": {\n",
         "            \"type\": \"group\",\n",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "XkWQ9DT11mhu"
       },
-      "execution_count": 11,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -354,7 +354,7 @@
         "for index, row in df.iterrows():\n",
         "    pubchem_id = row['pubchem_id']\n",
         "    pdb_id = row['pdbid']\n",
-        "    query = build_query(str(pubchem_id), pdb_id)\n",
+        "    query = pdb_query(str(pubchem_id), pdb_id)\n",
         "    download_pdb(query,f'/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/{pubchem_id}')\n",
         "    print(f\"Processed PubChem ID: {pubchem_id}\")"
       ],
@@ -804,22 +804,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#why do we need these:\n",
-        "import subprocess\n",
-        "from pathlib import Path\n",
-        "\n",
-        "#not sure if the previous one works\n",
-        "from Bio.PDB.Polypeptide import is_aa"
-      ],
-      "metadata": {
-        "id": "BRobR3m1MxhW"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# **Seperate the chains**"
@@ -888,11 +872,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "pG_hoopzNJ8G",
-        "outputId": "2246d597-3720-499c-dab2-83b28475b4d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pG_hoopzNJ8G",
+        "outputId": "2246d597-3720-499c-dab2-83b28475b4d3"
       },
       "execution_count": 27,
       "outputs": [
@@ -995,89 +979,76 @@
     {
       "cell_type": "code",
       "source": [
-        "def run_blastp(query_fasta, db_path, taxid, output_json):\n",
-        "    \"\"\"\n",
-        "    Run BLASTp for a query FASTA file against a PDB database restricted to a specific taxonomy.\n",
+        "def blast_sequence(fasta_file, tax_id=\"5833\"):\n",
+        "    \"\"\"Extract sequence from FASTA and perform remote BLAST.\"\"\"\n",
+        "    with open(fasta_file, 'r') as f:\n",
+        "        sequence = ''.join([line.strip() for line in f if not line.startswith(\">\")])\n",
         "\n",
-        "    Args:\n",
-        "        query_fasta (str): Path to the query FASTA file.\n",
-        "        db_path (str): Path to the BLAST database.\n",
-        "        taxid (str): Taxonomy ID to restrict the search.\n",
-        "        output_json (str): Path to save the BLAST results as JSON.\n",
-        "    \"\"\"\n",
-        "    temp_output = output_json.replace('.json', '.txt')\n",
+        "    print(f\"[INFO] Running BLAST for: {fasta_file}\")\n",
         "\n",
-        "    command = [\n",
-        "        \"blastp\",\n",
-        "        \"-query\", query_fasta,\n",
-        "        \"-db\", db_path,\n",
-        "        \"-entrez_query\", f\"txid{taxid}[Organism:exp]\",\n",
-        "        \"-outfmt\", \"6 qseqid sseqid pident length evalue bitscore stitle\",\n",
-        "        \"-max_target_seqs\", \"3\",\n",
-        "        \"-out\", temp_output\n",
-        "    ]\n",
+        "    output_json = os.path.splitext(fasta_file)[0] + \".json\"\n",
         "\n",
-        "    print(f\"Running BLASTp for: {query_fasta}\")\n",
-        "    subprocess.run(command, check=True)\n",
+        "    try:\n",
+        "        result_handle = NCBIWWW.qblast(\n",
+        "            program=\"blastp\",\n",
+        "            database=\"pdb\",\n",
+        "            sequence=sequence,\n",
+        "            entrez_query=f\"txid{tax_id}[ORGN]\",\n",
+        "            hitlist_size=3\n",
+        "        )\n",
         "\n",
-        "    results = []\n",
-        "    with open(temp_output, \"r\") as f:\n",
-        "        for line in f:\n",
-        "            parts = line.strip().split(\"\\t\")\n",
-        "            results.append({\n",
-        "                \"query_id\": parts[0],\n",
-        "                \"subject_id\": parts[1],\n",
-        "                \"percent_identity\": float(parts[2]),\n",
-        "                \"alignment_length\": int(parts[3]),\n",
-        "                \"evalue\": float(parts[4]),\n",
-        "                \"bitscore\": float(parts[5]),\n",
-        "                \"subject_title\": parts[6]\n",
-        "            })\n",
+        "        blast_record = NCBIXML.read(result_handle)\n",
         "\n",
-        "    with open(output_json, \"w\") as f:\n",
-        "        json.dump(results, f, indent=4)\n",
+        "        results = []\n",
         "\n",
-        "    os.remove(temp_output)\n",
-        "    print(f\"[✓] BLAST results saved to: {output_json}\")\n",
+        "        if not blast_record.alignments:\n",
+        "            print(\"[INFO] No result found.\")\n",
+        "            results.append({\"message\": \"No result found.\"})\n",
+        "        else:\n",
+        "            print(f\"[✓] BLAST Results for {fasta_file}:\")\n",
+        "            for alignment in blast_record.alignments:\n",
+        "                hsp = alignment.hsps[0]  # Take the best HSP\n",
+        "                result = {\n",
+        "                    \"subject_id\": alignment.accession,\n",
+        "                    \"title\": alignment.title,\n",
+        "                    \"percent_identity\": hsp.identities / hsp.align_length * 100,\n",
+        "                    \"alignment_length\": hsp.align_length,\n",
+        "                    \"evalue\": hsp.expect,\n",
+        "                    \"bitscore\": hsp.score\n",
+        "                }\n",
+        "                results.append(result)\n",
+        "                print(f\"  → Subject ID: {result['subject_id']}\")\n",
+        "                print(f\"     Title    : {result['title']}\")\n",
+        "                print(f\"     Identity : {hsp.identities}/{hsp.align_length}\")\n",
+        "                print(f\"     E-value  : {hsp.expect}\")\n",
+        "                print(f\"     Score    : {hsp.score}\\n\")\n",
         "\n",
+        "        # Save results to JSON\n",
+        "        with open(output_json, \"w\") as f:\n",
+        "            json.dump(results, f, indent=4)\n",
+        "        print(f\"[✓] Results saved to: {output_json}\")\n",
         "\n",
-        "def process_pubchem_folder(pubchem_folder, db_path, taxid=\"5833\"):\n",
-        "    \"\"\"\n",
-        "    Process a folder of PDB files: extract chains, run BLASTp, save results.\n",
-        "\n",
-        "    Args:\n",
-        "        pubchem_folder (str): Path to the folder for one PubChem ID.\n",
-        "        db_path (str): Path to the BLAST database.\n",
-        "        taxid (str): Taxonomy ID for BLAST restriction.\n",
-        "    \"\"\"\n",
-        "    folder_path = Path(pubchem_folder)\n",
-        "\n",
-        "    for pdb_file in folder_path.glob(\"*.pdb\"):\n",
-        "        print(f\"\\n[INFO] Processing PDB: {pdb_file.name}\")\n",
-        "        chain_fastas = extract_protein_chains(str(pdb_file))\n",
-        "\n",
-        "        for fasta_path in chain_fastas:\n",
-        "            fasta = Path(fasta_path)\n",
-        "            json_output = fasta.with_suffix(\".json\")\n",
-        "\n",
-        "            # ✅ Skip if JSON result already exists\n",
-        "            if json_output.exists():\n",
-        "                print(f\"[SKIP] Result already exists: {json_output.name}\")\n",
-        "                continue\n",
-        "\n",
-        "            run_blastp(str(fasta), db_path, taxid, str(json_output))"
+        "    except Exception as e:\n",
+        "        print(f\"[!] Error during BLAST: {e}\")\n",
+        "        with open(output_json, \"w\") as f:\n",
+        "            json.dump({\"error\": str(e)}, f, indent=4)\n",
+        "        print(f\"[!] Error info saved to: {output_json}\")"
       ],
       "metadata": {
-        "id": "Xk0rOlnDKTx4"
+        "id": "Gw1mmOuVlq6f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# === Example usage ===\n",
+        "fasta_file = \"/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results/4735/1RKW_A.fasta\"\n",
+        "blast_sequence(fasta_file, \"5833\")"
+      ],
       "metadata": {
-        "id": "uMRE_rkaOaGe"
+        "id": "4bmAzuJMlq3W"
       },
       "execution_count": null,
       "outputs": []
@@ -1086,7 +1057,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RciBtwgfOaDN"
+        "id": "33xGsUaOlq0R"
       },
       "execution_count": null,
       "outputs": []
@@ -1095,7 +1066,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SSLgiOgjOaAH"
+        "id": "dgHHAXYmlqxW"
       },
       "execution_count": null,
       "outputs": []
@@ -1104,7 +1075,25 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WEb6MLjhOZ9F"
+        "id": "1SwWFAvYlquf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vT1bks-tlqrX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LfxBzwFalqWZ"
       },
       "execution_count": null,
       "outputs": []
@@ -1115,6 +1104,15 @@
       "metadata": {
         "id": "sFcEfTA5OZ6N"
       },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LcEB0-Vnj_Xs"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -1122,7 +1120,52 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IT06sKaGOZ3B"
+        "id": "G3e5q2OEj_VE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J5hk8zBsj_SN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xv3dDozEj_PZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uni0sEx4j_Mf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DHEWiRAtj_Jq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7NJucDvOj_HA"
       },
       "execution_count": null,
       "outputs": []
@@ -1279,7 +1322,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAz5zP3xM/2e0Cn3aJmtTx",
+      "authorship_tag": "ABX9TyMXKg9cOsQ5qs95zMEkTHTO",
       "include_colab_link": true
     },
     "kernelspec": {
